--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,6 +8,12 @@
         android:title="AddItem"
         app:showAsAction="always"
         />
+    <item
+        android:id="@+id/pogoda"
+        android:icon="@drawable/ic_done_black_24dp"
+        android:title="AddItem"
+        app:showAsAction="always"
+        />
 
 
     <item
