--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item
+        android:id="@+id/pogoda"
+        android:icon="@drawable/rainn"
+        android:title="AddItem"
+        app:showAsAction="always"
+        />
     <item
         android:id="@+id/add_item"
         android:icon="@drawable/ic_add_black_24dp"
         android:title="AddItem"
         app:showAsAction="always"
         />
-    <item
-        android:id="@+id/pogoda"
-        android:icon="@drawable/ic_done_black_24dp"
-        android:title="AddItem"
-        app:showAsAction="always"
-        />
-
-
     <item
         android:id="@+id/clear_completed"
         android:title="Удалить выполненые задачи"
